dev/app-ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:
  name: customer-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
    - host: customer-app.poc.com
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:  
                name: customer-api
                port:  
                  number: 5001
